--- a/public/modules/core/css/core.scss
+++ b/public/modules/core/css/core.scss
@@ -390,6 +390,17 @@ section.section {
   float: none;
 }
 
+.tab-list {
+  margin: 0;
+  li {
+    padding: 12px;
+    height: 50px;
+    &.active {
+      border-bottom: 4px solid #337ab7;
+    }
+  }
+}
+
 /*
 .navbar .navbar-nav > .active > a {
 	color: #fff;
@@ -1242,7 +1253,34 @@ a {
   cursor: pointer;
 }
 
+.id-left-column {
+  margin-top: 75px;
+}
+
+.cover {
+  height: 200px;
+  background-image: url('https://pbs.twimg.com/profile_banners/543463785/1398252206/1500x500');
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+.cover-container {
+  position:absolute;
+  left:0;
+  right:0;
+  top:50px;
+  height:250px;
+  background-color:#ffffff;
+  border-bottom: 1px solid #efefef;
+}
+
 @media (min-width: 768px) { 
+  .nav-tabs {
+    display: none;
+  }
+  .id-right-column {
+    margin-top: 250px;
+  }
   #nav-search-field { width: 320px; }
   .navbar-form { width: 360px; }
    .filters, #write-feedback
