--- a/public/modules/core/css/core.scss
+++ b/public/modules/core/css/core.scss
@@ -1253,10 +1253,6 @@ a {
   cursor: pointer;
 }
 
-.id-left-column {
-  margin-top: 75px;
-}
-
 .cover {
   height: 200px;
   background-image: url('https://pbs.twimg.com/profile_banners/543463785/1398252206/1500x500');
@@ -1274,6 +1270,10 @@ a {
   border-bottom: 1px solid #efefef;
 }
 
+.nav-tabs {
+  margin-bottom: 20px;
+}
+
 @media (min-width: 768px) { 
   .nav-tabs {
     display: none;
@@ -1281,6 +1281,10 @@ a {
   .id-right-column {
     margin-top: 250px;
   }
+  .id-left-column {
+    margin-top: 75px;
+  }
+
   #nav-search-field { width: 320px; }
   .navbar-form { width: 360px; }
    .filters, #write-feedback
