--- a/public/modules/identifiers/views/view-identifier.client.view.html
+++ b/public/modules/identifiers/views/view-identifier.client.view.html
@@ -1,19 +1,19 @@
 <div data-ng-controller="IdentifiersController">
 <section class="cover-container">
-  <div class="cover" data-ng-style="coverPhoto"></div>
+  <div class="cover" parallax-background parallax-ratio="-0.2" data-ng-style="coverPhoto"></div>
   <div class="container hidden-xs hidden-sm">
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-9">
         <ul class="list-inline tab-list">
-          <li data-ng-if="isUniqueType" data-ng-class="{ active: activeTab === 'received' }">
-            <a href="" data-ng-click="activeTab = 'received'"><span class="glyphicon glyphicon-download"></span> <span class="hidden-xs">Received </span>({{0+overview.receivedPositive+overview.receivedNeutral+overview.receivedNegative}})</a>
+          <li data-ng-if="isUniqueType" data-ng-class="{ active: tab.active === 'received' }">
+            <a href="" data-ng-click="tab.active = 'received'"><span class="glyphicon glyphicon-download"></span> <span class="hidden-xs">Received </span>({{0+overview.receivedPositive+overview.receivedNeutral+overview.receivedNegative}})</a>
           </li>
-          <li data-ng-if="isUniqueType" data-ng-class="{ active: activeTab === 'sent' }">
-            <a href="" data-ng-click="activeTab = 'sent'"><span class="glyphicon glyphicon-upload"></span> <span class="hidden-xs">Sent </span>({{0+overview.authoredPositive+overview.authoredNeutral+overview.authoredNegative}})</a>
+          <li data-ng-if="isUniqueType" data-ng-class="{ active: tab.active === 'sent' }">
+            <a href="" data-ng-click="tab.active = 'sent'"><span class="glyphicon glyphicon-upload"></span> <span class="hidden-xs">Sent </span>({{0+overview.authoredPositive+overview.authoredNeutral+overview.authoredNegative}})</a>
           </li>
-          <li data-ng-class="{ active: activeTab === 'connections' }">
-            <a href="" data-ng-click="activeTab = 'connections'"><span class="glyphicon glyphicon-link"></span> <span class="hidden-xs">Connections </span>(<span data-ng-show="connections.$resolved && connections.length > 0" data-ng-bind="connections.length - 1"></span><span data-ng-hide="connections.$resolved">0</span>)</a>
+          <li data-ng-class="{ active: tab.active === 'connections' }">
+            <a href="" data-ng-click="tab.active = 'connections'"><span class="glyphicon glyphicon-link"></span> <span class="hidden-xs">Connections </span>(<span data-ng-show="connections.$resolved && connections.length > 0" data-ng-bind="connections.length - 1"></span><span data-ng-hide="connections.$resolved">0</span>)</a>
           </li>
         </ul>
       </div>
@@ -99,8 +99,8 @@
     <div class="col-md-8 id-right-column">
       <!-- Nav tabs -->
       <tabset>
-        <tab active="activeTab === 'received'" data-ng-if="isUniqueType">
-          <tab-heading data-ng-click="activeTab = 'received'"><span class="glyphicon glyphicon-download"></span> <span class="hidden-xs">Received </span>({{0+overview.receivedPositive+overview.receivedNeutral+overview.receivedNegative}})</tab-heading>
+        <tab active="tab.active === 'received'" data-ng-if="isUniqueType">
+          <tab-heading data-ng-click="tab.active = 'received'"><span class="glyphicon glyphicon-download"></span> <span class="hidden-xs">Received </span>({{0+overview.receivedPositive+overview.receivedNeutral+overview.receivedNegative}})</tab-heading>
           <div data-ng-hide="authentication.user" class="alert alert-info text-center login-alert-info">
             <strong><a href="#!/signin">Log in</a></strong> to write messages.
           </div>
@@ -134,21 +134,21 @@
           </div>
 
           <div data-ng-if="received.$resolved && received.length == 0" class="alert alert-info text-center animated fadeIn">No messages to show</div>
-          <div infinite-scroll="getReceivedMsgs()" infinite-scroll-distance="2" infinite-scroll-disabled="!received.$resolved || received.finished || activeTab !== 'received'">
+          <div infinite-scroll="getReceivedMsgs()" infinite-scroll-distance="2" infinite-scroll-disabled="!received.$resolved || received.finished || tab.active !== 'received'">
             <div data-ng-repeat="msg in received" data-ng-include="'modules/messages/views/message.partial.html'"></div>
           </div>
           <div data-ng-if="!received.$resolved" style="position:relative;padding:20px" us-spinner></div>
         </tab>
-        <tab active="activeTab === 'sent'" data-ng-if="isUniqueType" data-ng-click="activeTab = 'sent'">
-          <tab-heading data-ng-click="activeTab = 'sent'"><span class="glyphicon glyphicon-upload"></span> <span class="hidden-xs">Sent </span>({{0+overview.authoredPositive+overview.authoredNeutral+overview.authoredNegative}})</tab-heading>
+        <tab active="tab.active === 'sent'" data-ng-if="isUniqueType" data-ng-click="tab.active = 'sent'">
+          <tab-heading data-ng-click="tab.active = 'sent'"><span class="glyphicon glyphicon-upload"></span> <span class="hidden-xs">Sent </span>({{0+overview.authoredPositive+overview.authoredNeutral+overview.authoredNegative}})</tab-heading>
           <div data-ng-if="sent.$resolved && sent.length == 0" class="alert alert-info text-center animated fadeIn">No messages to show</div>
-          <div infinite-scroll="getSentMsgs()" infinite-scroll-distance="2" infinite-scroll-disabled="!sent.$resolved || sent.finished || activeTab !== 'sent'">
+          <div infinite-scroll="getSentMsgs()" infinite-scroll-distance="2" infinite-scroll-disabled="!sent.$resolved || sent.finished || tab.active !== 'sent'">
             <div data-ng-repeat="msg in sent" data-ng-include="'modules/messages/views/message.partial.html'"></div>
           </div>
           <div data-ng-if="!sent.$resolved" style="position:relative;padding:20px" us-spinner></div>
         </tab>
-        <tab active="activeTab === 'connections'" data-ng-if="true" data-ng-click="activeTab = 'connections'">
-            <tab-heading data-ng-click="activeTab = 'connections'"><span class="glyphicon glyphicon-link"></span> <span class="hidden-xs">Connections </span>(<span data-ng-show="connections.$resolved && connections.length > 0" data-ng-bind="connections.length - 1"></span><span data-ng-hide="connections.$resolved"></span>)</tab-heading>
+        <tab active="tab.active === 'connections'" data-ng-if="true" data-ng-click="tab.active = 'connections'">
+            <tab-heading data-ng-click="tab.active = 'connections'"><span class="glyphicon glyphicon-link"></span> <span class="hidden-xs">Connections </span>(<span data-ng-show="connections.$resolved && connections.length > 0" data-ng-bind="connections.length - 1"></span><span data-ng-hide="connections.$resolved"></span>)</tab-heading>
             <div id="connections">
               <input id="authenticity_token" name="authenticity_token" type="hidden" value="z1JM7ffnFK7gOv6S3yzG9UFyakukYHikAU94/3TcT2o=">    <table class="table truncated-table table-hover">
                 <tbody>
