Profile pic from FB

--- a/public/modules/identifiers/views/view-identifier.client.view.html
+++ b/public/modules/identifiers/views/view-identifier.client.view.html
@@ -28,7 +28,7 @@
       <table class="stats-box table-condensed">
         <tbody><tr>
           <td colspan="2">
-            <a data-ng-href="http://www.gravatar.com/{{gravatar}}" data-toggle="tooltip" data-placement="right" title="Gravatar for {{email}}"><img src="http://www.gravatar.com/avatar/{{gravatar}}?d=retro&amp;s=210" class="img-thumbnail mar-right5" alt="Gravatar for {{overview.email}}"></a>
+            <a data-ng-href="" data-toggle="tooltip" data-placement="right"><img data-ng-src="{{profilePhotoUrl}}" width="220" height="220" class="img-thumbnail mar-right5"></a>
           </td>
         </tr>
         <tr>
