--- a/public/modules/core/css/core.scss
+++ b/public/modules/core/css/core.scss
@@ -1282,6 +1282,10 @@ a {
   margin-bottom: 20px;
 }
 
+.ui-match {
+  font-weight: bold;
+}
+
 @media (min-width: 768px) { 
   .nav-tabs {
     display: none;
