--- a/public/modules/users/views/authentication/signin.client.view.html
+++ b/public/modules/users/views/authentication/signin.client.view.html
@@ -9,8 +9,8 @@
 		<a href="/auth/google" class="undecorated-link">
 			<img src="/modules/users/img/buttons/google.png">
 		</a>
-		<!--<a href="" class="hidden-xs" data-ng-click="login()" class="undecorated-link">
+		<a href="" class="hidden-xs" data-ng-click="login()" class="undecorated-link">
 			<img src="/modules/users/img/buttons/email.png">
-		</a>-->
+		</a>
 	</div>
 </section>
