Show id in id pages

--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -2,7 +2,7 @@
 	<div class="container" role="navigation">
     <div class="navbar-header">
       <h1><a href="/#!/" data-ng-click="logoClicked()" class="navbar-brand">
-      <span class="visible-inline-xs small glyphicon glyphicon-chevron-left" ui-route="/" data-ng-hide="$uiRoute"></span>
+      <span class="visible-xs-inline small glyphicon glyphicon-chevron-left" ui-route="/" data-ng-hide="$uiRoute"></span>
       Identifi</a></h1>
     </div>
 
