--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -1337,7 +1337,7 @@ a:hover {
   left: 0;
   right: 0;
   top: 50px;
-  height: 250px;
+  height: 300px;
   background-color: #ffffff;
   border-bottom: 1px solid #efefef;
 }
@@ -1350,17 +1350,25 @@ a:hover {
   font-weight: bold;
 }
 
+.heading-row {
+  height: 50px;
+  padding: 15px;
+}
+.heading-row h4 {
+  margin: 0;
+}
+
 @media (min-width: 768px) {
   .nav-tabs {
     display: none;
   }
 
   .id-right-column {
-    margin-top: 250px;
+    margin-top: 300px;
   }
 
   .id-left-column {
-    margin-top: 75px;
+    margin-top: 100px;
   }
 
   #nav-search-field {
