--- a/public/modules/core/css/core.scss
+++ b/public/modules/core/css/core.scss
@@ -1273,7 +1273,7 @@ a {
   left:0;
   right:0;
   top:50px;
-  height:250px;
+  height:300px;
   background-color:#ffffff;
   border-bottom: 1px solid #efefef;
 }
@@ -1286,15 +1286,21 @@ a {
   font-weight: bold;
 }
 
+.heading-row {
+  height: 50px;
+  padding: 15px;
+  h4 { margin: 0; }
+}
+
 @media (min-width: 768px) { 
   .nav-tabs {
     display: none;
   }
   .id-right-column {
-    margin-top: 250px;
+    margin-top: 300px;
   }
   .id-left-column {
-    margin-top: 75px;
+    margin-top: 100px;
   }
 
   #nav-search-field { width: 320px; }
