--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -1390,6 +1390,11 @@ a:hover {
   }
 }
 @media (max-width: 767px) {
+  .cover-container {
+    background-color: inherit;
+    border: 0;
+  }
+
   .mar-top60-xs {
     margin-top: 60px;
   }
