--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -1364,7 +1364,7 @@ a:hover {
   margin: 0 10px 10px 0;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .nav-tabs {
     display: none;
   }
@@ -1389,12 +1389,17 @@ a:hover {
     display: block !important;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 991px) {
+  .cover {
+    border-bottom: 1px solid #efefef;
+  }
+
   .cover-container {
     background-color: inherit;
     border: 0;
   }
-
+}
+@media (max-width: 767px) {
   .mar-top60-xs {
     margin-top: 60px;
   }
