Show nickname, fix connectingmsg link

--- a/public/modules/identifiers/views/view-identifier.client.view.html
+++ b/public/modules/identifiers/views/view-identifier.client.view.html
@@ -26,7 +26,7 @@
             <a href="" data-ng-class="{ active: tabs[1].active }" data-ng-click="tabs[1].active = true"><span class="glyphicon glyphicon-upload"></span> <span class="hidden-xs">Sent </span>({{0+overview.authoredPositive+overview.authoredNeutral+overview.authoredNegative}})</a>
           </li>
           <li>
-            <a href="" data-ng-class="{ active: tabs[2].active }" data-ng-click="tabs[2].active = true"><span class="fa fa-book"></span> <span class="hidden-xs">Details </span>(<span data-ng-show="connections.$resolved && connections.length > 0" data-ng-bind="connections.length - 1"></span><span data-ng-hide="connections.$resolved">0</span>)</a>
+            <a href="" data-ng-class="{ active: tabs[2].active }" data-ng-click="tabs[2].active = true"><span class="fa fa-book"></span> <span class="hidden-xs">Identity </span>(<span data-ng-show="connections.$resolved && connections.length > 0" data-ng-bind="connections.length - 1"></span><span data-ng-hide="connections.$resolved">0</span>)</a>
           </li>
         </ul>
       </div>
@@ -53,7 +53,7 @@
             </p>
           </div>
           <div class="col-xs-6 col-sm-6 col-md-12 col-lg-12">
-            <h4 data-ng-bind="overview.name||idValue"></h4>
+            <h4><span data-ng-bind="name||idValue"></span><span data-ng-show="nickname"> (<span class="text-muted" data-ng-bind="nickname"></span>)</span></h4>
             <p class="received-stats">
               <div><strong>Received</strong></div>
               <div>
@@ -155,7 +155,7 @@
           <div data-ng-if="!sent.$resolved" style="position:relative;padding:20px" us-spinner></div>
         </tab>
         <tab active="tabs[2].active" data-ng-if="true">
-            <tab-heading><span class="fa fa-book"></span> <span class="hidden-xs">Details </span>(<span data-ng-show="connections.$resolved && connections.length > 0" data-ng-bind="connections.length - 1"></span><span data-ng-hide="connections.$resolved"></span>)</tab-heading>
+            <tab-heading><span class="fa fa-book"></span> <span class="hidden-xs">Identity </span>(<span data-ng-show="connections.$resolved && connections.length > 0" data-ng-bind="connections.length - 1"></span><span data-ng-hide="connections.$resolved"></span>)</tab-heading>
             <div id="connections">
               <input id="authenticity_token" name="authenticity_token" type="hidden" value="z1JM7ffnFK7gOv6S3yzG9UFyakukYHikAU94/3TcT2o=">    <table class="table truncated-table table-hover">
                 <tbody>
@@ -193,7 +193,7 @@
                             <span class="negative glyphicon glyphicon-remove visible-xs mar-right10"></span>
                           </span>
                           <strong>
-                            <a data-ng-href="#!/id/{{msg.data.signedData.author[0][0]}}/{{msg.data.signedData.author[0][1]}}" class="id-link">
+                            <a data-ng-href="#!/id/{{msg.linkToAuthor[0]|escape}}/{{msg.linkToAuthor[1]|escape}}" class="id-link">
                               <img alt="" src="https://www.gravatar.com/avatar/{{msg.gravatar}}?d=retro&amp;s=30" class="img-rounded mar-right5"> 
                               <span data-ng-bind="msg.authorName||msg.data.signedData.author[0][1]"></span>
                             </a>
